// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse weights 1`] = `
Array [
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/3",
    "name": "AKT/OSMO",
    "poolId": "3",
    "type": "pool",
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/1",
    "name": "ATOM/OSMO",
    "poolId": "1",
    "type": "pool",
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/600",
    "name": "ATOM/CMDX",
    "poolId": "600",
    "type": "pool",
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/606",
    "name": "ATOM/HUAHUA",
    "poolId": "606",
    "type": "pool",
    "weight": 5,
  },
  Object {
    "allocation": 0.0625,
    "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
    "name": "LUNA",
    "symbol": "LUNA",
    "type": "coin",
    "weight": 2,
  },
  Object {
    "allocation": 0.3125,
    "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
    "name": "UST",
    "symbol": "UST",
    "type": "coin",
    "weight": 10,
  },
]
`;

exports[`pools desired 1`] = `
Array [
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/3",
    "name": "AKT/OSMO",
    "poolId": "3",
    "type": "pool",
    "value": 1994.21875,
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/1",
    "name": "ATOM/OSMO",
    "poolId": "1",
    "type": "pool",
    "value": 1994.21875,
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/600",
    "name": "ATOM/CMDX",
    "poolId": "600",
    "type": "pool",
    "value": 1994.21875,
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/606",
    "name": "ATOM/HUAHUA",
    "poolId": "606",
    "type": "pool",
    "value": 1994.21875,
    "weight": 5,
  },
  Object {
    "allocation": 0.0625,
    "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
    "name": "LUNA",
    "symbol": "LUNA",
    "type": "coin",
    "value": 797.6875,
    "weight": 2,
  },
  Object {
    "allocation": 0.3125,
    "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
    "name": "UST",
    "symbol": "UST",
    "type": "coin",
    "value": 3988.4375,
    "weight": 10,
  },
]
`;
